src/components/index/index.scss
body {
  $background: #e7f2ea;

  min-height: 100vh;
  background: $background
    linear-gradient(to bottom, $background 75%, darken($background, 10%) 100%);
}

.LunchBot {
  margin: 0 auto;
  padding: 10vh 25px 25px 25px;
  max-width: 700px;

  h1.pageTitle {
    font-size: 40px;
    color: #c2577b;
  }

  hr {
    margin: 40px 0;
  }

  h3 {
    font-size: 24px;
    font-weight: 300;
  }

  p {
    span {
      white-space: nowrap;
    }
  }

  .placesList {
    $borderRadius: 5px;
    $borderColor: rgba(0, 0, 0, 0.1);

    list-style: none;
    margin: 25px 0 15px 0;
    padding: 0;
    border-radius: $borderRadius;
    overflow: hidden;
    background: #fff;
    box-shadow: 0 3px 8px rgba(0, 0, 0, 0.04);

    & > li {
      border: 1px solid $borderColor;
      border-bottom: none;
      padding: 20px;
      font-size: 26px;
      line-height: 120%;

      &:before {
        display: block;
        padding-bottom: 5px;

        text-transform: uppercase;
        font-size: 12px;
        line-height: 100%;
        font-weight: 300;
        color: #888;
      }

      &:nth-child(1) {
        background: #82708e;
        color: #fff;
        font-weight: 500;

        &:before {
          content: 'My top suggestion';
          color: #ccc;
        }
      }

      &:nth-child(2):before {
        content: 'Okay. What about';
      }

      &:nth-child(3):before {
        content: 'Or maybe even';
      }

      &:first-child {
        border-top-left-radius: $borderRadius;
        border-top-right-radius: $borderRadius;
      }

      &:last-child {
        border-bottom: 1px solid $borderColor;
        border-bottom-left-radius: $borderRadius;
        border-bottom-right-radius: $borderRadius;
      }
    }
  }

  .idempotent {
    margin-top: 50px;
    padding: 20px;
    border: 1px solid rgba(0, 0, 0, 0.1);
    border-radius: 5px;
    font-size: 14px;
    color: rgba(0, 0, 0, 0.75);

    a {
      display: block;
      color: #60d5da;
    }
  }

  footer {
    margin-top: 40px;
    color: #888;
    font-size: 14px;

    a {
      color: #60d5da;
    }
  }
}

